# pyhexlib

./: .gitignore  LICENSE  Manifest.in  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci-tests.yml  docs.yml  release.yml  tests.yml
docs/: HowToBuild.md  README.md  api.rst  conf.py  index.rst  requirements.txt
examples/00_demos/: demo.py  neighbors.py  scrolling.py
examples/01_simple_game/: simple_game.py
examples/02_token_game/: assets.py  controller.py  game.py  main.py
examples/03_abalone/: Abalone (Spiel) – Wikipedia.url  Readme.md  abalone.py  assets.py  board.py  controller.py
examples/04_war_game/: assets.py  controller.py  game.py  main.py
examples/05_space_game/: assets.py  controller.py  game.py  main.py
examples/06_strategic_game/: assets.py  controller.py  game.py  game_gui.py  main.py
src/pygui/: README.md  basic.py  components.py  decorators.py  draw.py  gui.py  layout.py  render.py  widgets.py
src/pyguilib/: README.md  __init__.py  __main__.py  components.py  decorators.py  draw.py  gui.py  layout.py  render.py  widgets.py
src/pyhex/: Readme.md  __init__.py  __main__.py  assets.py  basic.py  graphic.py  hexagons.py  layers.py  render.py  tokens.py  utils.py  viewport.py
src/pyhexlib/: Readme.md  __init__.py  __main__.py  assets.py  basic.py  graphic.py  hexagons.py  layers.py  palette.py  render.py  tokens.py  utils.py  viewport.py
src/pylightgui/: README.md  __main__.py  components.py  decorators.py  draw.py  gui.py  layout.py  render.py  widgets.py
tests/pyhex/: __init__.py  test_basic.py  test_basic_extra.py
tests/pyhexlib/: __init__.py  test_basic.py  test_basic_extra.py  test_graphic_render.py  test_hexagons.py  test_layers.py  test_utils.py  test_viewport.py
