# File: `pyproject.toml`
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhex"
version = "0.1.0"
description = "A Python library for creating hex grid games with pygame."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Heiko Sippel", email = "heiko.sippel@gmail.com" }]
dependencies = []

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

keywords = ["pygame", "hex", "hexgrid"]

[project.urls]
Homepage = "https://github.com/infaktum/pyhex"
Repository = "https://github.com/infaktum/pyhex"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyhex*"]



[project.scripts]
epub = "pyhex.__main__:main"

