[metadata]
name = pyhex
version = 0.1.0
description = Hexagonal grid utilities and Pygame renderer
long_description = file: README.md
long_description_content_type = text/markdown
author = Heiko Sippel
license = MIT
url = https://example.org/pyhex
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
install_requires =
    pygame>=2.0
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    build
    twine

